--- a/starter/app/src/main/res/navigation/nav_graph.xml
+++ b/starter/app/src/main/res/navigation/nav_graph.xml
@@ -54,6 +54,9 @@
         <action
             android:id="@+id/action_fragmentReminderDetails_to_reminderListFragment"
             app:destination="@id/reminderListFragment" />
+        <argument
+            android:name="reminderItem"
+            app:argType="com.udacity.project4.data.model.Reminder" />
     </fragment>
     <fragment
         android:id="@+id/splashFragment"
