--- a/starter/app/src/main/res/layout/fragment_reminders.xml
+++ b/starter/app/src/main/res/layout/fragment_reminders.xml
@@ -43,8 +43,8 @@
             android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
             android:gravity="center"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
