--- a/starter/app/src/main/res/layout/fragment_select_location.xml
+++ b/starter/app/src/main/res/layout/fragment_select_location.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <!--TODO: Add the map fragment for the user to select the location-->
@@ -11,5 +12,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </RelativeLayout>
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/select_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/padding_large"
+            android:backgroundTint="@color/black"
+            android:text="@string/select_location"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:icon="@drawable/ic_tick"
+            app:iconSize="@dimen/gap_16dp"
+            app:iconTint="@color/white"
+            app:iconPadding="@dimen/padding_small" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
