fix: Null check before room insertion -Null check of latitude, longitude & reminder title is added. -'showMessage' liveData added for showing insertion success/failure status

--- a/starter/app/src/main/res/navigation/nav_graph.xml
+++ b/starter/app/src/main/res/navigation/nav_graph.xml
@@ -32,13 +32,9 @@
             android:id="@+id/action_saveReminderFragment_to_selectLocationFragment"
             app:destination="@id/selectLocationFragment" />
         <argument android:name="selectedLatitude"
-            app:argType="string"
-            app:nullable="true"
-            android:defaultValue=" " />
+            android:defaultValue="0" />
         <argument android:name="selectedLongitute"
-            app:argType="string"
-            app:nullable="true"
-            android:defaultValue=" " />
+            android:defaultValue="0" />
         <argument
             android:name="selectedLocationName"
             app:argType="string"
