fix: Databinding & Livedata errors in Saving reminder * Koin sharedviewmodel is used in SelectLocationFragment.kt & SaveReminderFragment.kt for setting location details and saving the reminder.
Obeservation: Notification is triggering at right time.

--- a/starter/app/src/main/res/layout/fragment_save_reminder.xml
+++ b/starter/app/src/main/res/layout/fragment_save_reminder.xml
@@ -8,10 +8,6 @@
         <variable
             name="viewModel"
             type="com.udacity.project4.viewmodel.SaveReminderViewModel" />
-
-        <variable
-            name="locationName"
-            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,7 +23,8 @@
             android:text="@={viewModel.reminderTitle}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="Autofill,TextFields" />
 
         <EditText
             android:id="@+id/reminderDescription"
@@ -39,7 +36,8 @@
             android:text="@={viewModel.reminderDescription}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/reminderTitle" />
+            app:layout_constraintTop_toBottomOf="@id/reminderTitle"
+            tools:ignore="Autofill,TextFields" />
 
         <TextView
             android:id="@+id/selectLocation"
@@ -60,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_normal"
-            android:text="@{locationName}"
+            android:text="@{viewModel.location}"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="@id/selectLocation"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,13 +70,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_normal"
+            android:contentDescription="@string/select_location"
             android:fadeVisible="@{!viewModel.showLoading}"
             android:src="@drawable/ic_save"
             app:fabSize="normal"
             app:layout_anchorGravity="bottom|right|end"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:contentDescription="@string/select_location" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <ProgressBar
             android:id="@+id/progressBar"
