--- a/starter/app/src/main/res/navigation/nav_graph.xml
+++ b/starter/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <action
         android:id="@+id/action_global_reminderDetailsFragment"
         app:destination="@+id/fragmentReminderDetails"
-        app:launchSingleTop="true"/>
+        app:launchSingleTop="true" />
 
     <fragment
         android:id="@+id/reminderListFragment"
@@ -42,11 +42,6 @@
         <argument
             android:name="selectedLongitute"
             android:defaultValue="0.0" />
-        <argument
-            android:name="selectedLocationName"
-            android:defaultValue=" "
-            app:argType="string"
-            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/selectLocationFragment"
@@ -90,6 +85,9 @@
         <action
             android:id="@+id/action_splashFragment_to_reminderListFragment"
             app:destination="@id/reminderListFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_fragmentReminderDetails"
+            app:destination="@id/fragmentReminderDetails" />
     </fragment>
 
 </navigation>
